Changed to fix scrolling on smaller widths.

--- a/css/added.css
+++ b/css/added.css
@@ -87,8 +87,8 @@ section#organizers {
 
 /*Leaving a comment where Andrew grotesquely added CSS instead of editing the SCSS.*/
 @media only screen and (max-width: 43em) {
-  body, html { 
-  	overflow-x:hidden; 
+  html.touch { 
+ 	overflow-x: hidden;
   }
   section#sponsors div.company-logo img{
       padding-bottom: 1.5rem; }
